# probate-data-extractor1

./: README.md  app.py  csv file probate records.csv  gitignore (1).txt  pyproject.toml
modules/: firecrawl_client.py
services/: logger_service.py
